grammar.js
    source_file: $ => seq(
      // Treat '#!' as a line comment for now to preserve existing highlighting rules
      optional(alias($.hashbang_line, $.line_comment)),
      repeat($._top_level_item),
    ),

    // Literals
    // -------------------------
    integer_literal: _ => token(seq(
      choice(
        INT,
        seq(/0[xX]/, HINT),
        seq(/0[oO]/, OINT),
        seq(/0[bB]/, BINT),
      ),
      optional(INTTYPE),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    raw_string_literal: $ => seq(
      '`',
      alias(token.immediate(repeat(prec(1, /(``|[^`])/))), $.raw_string_content),
      '`',
    ),

    _doc_comment_description: $ => seq(':', field('description', $.string_expr)),
    _doc_comment_contract_param_name: $ => choice($._arg_ident, '...'),
    doc_comment_contract_descriptor: _ => token(/\[&?(?:in|out|inout|own|init|drop)\]/),
    doc_comment_contract: $ => choice(
      seq(
        field('name', alias('@param', $.at_ident)),
        optional(field('modifier', $.doc_comment_contract_descriptor)),
        field('parameter', $._doc_comment_contract_param_name),
        optional($._doc_comment_description),
      ),
      seq(
        field('name', alias(choice('@ensure', '@require'), $.at_ident)),
        optional($.doc_comment_require_parameter),
        commaSep1($.expression),
        optional($._doc_comment_description),
      ),
      seq(
        field('name', alias('@return', $.at_ident)),
        choice(
          seq(
            '?',
            commaSep1($.expression),
            optional($._doc_comment_description),
          ),
          optional(field('description', $.string_expr)),
        ),
      ),
      // Other @idents
      seq(
        field('name', $.at_ident),
        optional(field('description', $.string_expr)),
      ),
    ),
    doc_comment: $ => seq(
      '<*',
      // NOTE parsed by scanner.c (scan_doc_comment_text)
      optional($.doc_comment_text),
      repeat($.doc_comment_contract),
      '*>',
    ),
    block_comment: $ => seq(
      '/*',
      // NOTE parsed by scanner.c (scan_block_comment_scanner)
      $.block_comment_text,
      // NOTE parsed by scanner.c (scan_block_comment_end_or_eof)
      alias($.block_comment_end_or_eof, '*/'),
    ),

    // Identifiers
    // -------------------------
    // Variables, parameters, functions and macros
    ident: _ => IDENT,
    at_ident: _ => token(seq('@', IDENT)),
    _expr_ident: $ => choice(
      $.const_ident,
      $.ident,
      $.at_ident,
    ),

    _local_expr_ident: $ => choice(
      $.ct_ident,
      $.hash_ident,
    ),

    // Module Paths
    // -------------------------
    _module_path: $ => repeat1($.module_resolution),
    path_ident: $ => seq(optional($._module_path), $.ident),
    _parameters: $ => commaSepTrailing1($.param),

    // Attributes
    // -------------------------
    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.global_declaration,
      $.func_definition,

      $.ct_assert_stmt,
      $.ct_error_stmt,
      $.ct_echo_stmt,
      $.ct_include_stmt,
      $.ct_expand_stmt,
      $.ct_exec_stmt,

      $.struct_declaration,
      $.enum_declaration,
      $.macro_declaration,
      $.bitstruct_declaration,
      $.alias_declaration,
      $.faultdef_declaration,
      $.typedef_declaration,
      $.attrdef_declaration,
      $.interface_declaration,
      $.constdef_declaration,
    ),

    // Module
    // -------------------------
    module_declaration: $ => seq(
      optional($.doc_comment),
      'module',
      field('path', $.path_ident),
      optional($.generic_param_list),
      optional($.attributes),
      ';'
    ),

    // Import
    // -------------------------
    func_header: $ => seq(
      field('return_type', $.type),
      optional(seq(field('method_type', $.type), '.')),
      field('name', $.ident),
    ),

    func_param_list: $ => seq('(', optional($._parameters), ')'),

    func_definition: $ => prec.right(seq(
      optional($.doc_comment),
      'fn',
      $.func_header,
      $.func_param_list,
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.macro_func_body),
    )),

    macro_func_body: $ => choice(
      seq('=>', $.call_expr),
      seq($.implies_body, ';'),
      $.compound_stmt
    ),

    _statement: $ => choice(
      $.compound_stmt,
      $.expr_stmt,
      $.declaration_stmt,
      $.var_stmt,
      $.return_stmt,
      $.continue_stmt,
      $.break_stmt,
      $.switch_stmt,
      $.nextcase_stmt,
      $.if_stmt,
      $.for_stmt,
      $.foreach_stmt,
      $.while_stmt,
      $.do_stmt,
      $.defer_stmt,
      $.assert_stmt,
      $.asm_block_stmt,

      $.ct_assert_stmt,
      $.ct_error_stmt,
      $.ct_echo_stmt,
      $.ct_expand_stmt,
      $.ct_if_stmt,
      $.ct_switch_stmt,
      $.ct_foreach_stmt,
      $.ct_for_stmt,
      ';',
    ),

    // Labels
    // -------------------------
    compound_stmt: $ => prec(1, seq('{', repeat($._statement), '}')),

    // Expr Statement
    // -------------------------
    ident_expr: $ => choice(
      seq(optional($._module_path), $._expr_ident),
      $._local_expr_ident,
    ),

    string_expr: $ => prec.right(repeat1(choice($.string_literal, $.raw_string_literal))),
    binary_expr: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['|', PREC.BITWISE],
        ['^', PREC.BITWISE],
        ['&', PREC.BITWISE],
        ['==', PREC.RELATIONAL],
        ['!=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        // Compile time operators
        ['|||', PREC.LOGICAL_OR],
        ['&&&', PREC.LOGICAL_AND],
        ['+++', PREC.ADD],
      ];

      return make_binary_expr($, table);
    },

    // Call Expression
    // -------------------------
    _call_args: $ => choice(
      commaSepTrailing1($.call_arg),
      seq(
        commaSepTrailing($.call_arg),
        seq(';', optional($._parameters)),
      ),
    ),

    call_arg_list: $ => seq('(', optional($._call_args), ')'),

    // Right precedence for `@require foo() @pure` doc contract
    call_expr: $ => prec.right(PREC.TRAILING, seq(
      field('function', $.expression),
      field('arguments', $.call_arg_list),
      field('attributes', optional($.call_inline_attributes)),
      field('trailing', optional($.compound_stmt)),
    )),

    // Postfix Update Expression (--/++)
    // -------------------------
    access_ident: $ => choice(
      $.ident,       // Field/method function
      $.at_ident,    // Method macro
      $.hash_ident,  // Hash
      $.const_ident, // Enum access
      $.access_eval, // $eval
      $.ct_ident,    // Eval shorthand
    ),

    _access_ident_expr: $ => choice(
      field('field', $.access_ident),
      seq('(', $._access_ident_expr, ')'),
    ),

    field_expr: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $.expression),
        '.',
      )),
      $._access_ident_expr,
    ),

    base_type_name: $ => choice(
      'void',
      'bool',
      'char',
      'ichar',
      'short',
      'ushort',
      'int',
      'uint',
      'long',
      'ulong',
      'int128',
      'uint128',
      'float',
      'double',
      'float16',
      'bfloat',
      'float128',
      'iptr',
      'uptr',
      'sz',
      'usz',
      'fault',
      'any',
      'typeid',
      'untypedlist',
    ),

    _base_type: $ => prec.right(choice(
      $.base_type_name,
      $.path_type_ident,
      $.ct_type_ident,
      seq(
        choice(
          '$Typeof',
          '$Typefrom',
        ),
        $.paren_expr,
      ),
    )),

    type: $ => prec.right(seq(
      choice(
        $._base_type,
        $.generic_type_ident
      ),
      repeat($.type_suffix),
      optional('?'),
    )),
